--- a/contactos.html
+++ b/contactos.html
@@ -17,19 +17,30 @@
     </header>
 
     <main>
-        <h2>Contacta-nos</h2>
-        <p>Email: info@casadosaromas.com</p>
-        <p>Telefone: +351 912 345 678</p>
-        <p>Morada: Rua dos Aromas, 123, Lisboa, Portugal</p>
-        <form action="#" method="post">
-            <label for="nome">Nome:</label><br>
-            <input type="text" id="nome" name="nome"><br><br>
-            <label for="email">Email:</label><br>
-            <input type="email" id="email" name="email"><br><br>
-            <label for="mensagem">Mensagem:</label><br>
-            <textarea id="mensagem" name="mensagem" rows="4"></textarea><br><br>
-            <button type="submit">Enviar</button>
-        </form>
+        <section id="sobre">
+            <h2>Decoração da Casa</h2>
+            <p>Desde 1994 a decorar o seu lar 👇🏻</p>
+            <p>Decoração para casa, Cozinha, WC, Móveis, Têxteis</p>
+            <address>
+                Rua da Restauração 125 A, Rio Tinto, Porto, Portugal<br>
+                4435-056
+            </address>
+        </section>
+
+        <section id="contacto">
+            <h2>Contacta-nos</h2>
+            <p>Email: info@casadosaromas.com</p>
+            <p>Telefone: +351 912 345 678</p>
+            <form action="#" method="post">
+                <label for="nome">Nome:</label><br>
+                <input type="text" id="nome" name="nome"><br><br>
+                <label for="email">Email:</label><br>
+                <input type="email" id="email" name="email"><br><br>
+                <label for="mensagem">Mensagem:</label><br>
+                <textarea id="mensagem" name="mensagem" rows="4"></textarea><br><br>
+                <button type="submit">Enviar</button>
+            </form>
+        </section>
     </main>
 
     <footer>
