--- a/sobre.html
+++ b/sobre.html
@@ -4,26 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Nós - Casa dos Aromas</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- Assumindo que o ficheiro style.css está na mesma pasta -->
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
     <header>
         <h1>Casa dos Aromas</h1>
         <nav>
-            <a href="index.html">Início</a> |
+            <!-- Nota: Usei href="#" para as páginas que não foram criadas, mas tu deves ligar aos ficheiros reais (ex: index.html) -->
+            <a href="#">Início</a> |
             <a href="sobre.html">Sobre Nós</a> |
-            <a href="produtos.html">Produtos</a> |
-            <a href="contactos.html">Contactos</a>
+            <a href="#">Produtos</a> |
+            <a href="#">Contactos</a>
         </nav>
     </header>
 
     <section>
-        <h2>Sobre Nós</h2>
-        <p>A Casa dos Aromas nasceu para trazer beleza e conforto à tua casa. Seleccionamos produtos únicos de decoração e bricolage que transformam qualquer espaço.</p>
+        <h2>A Nossa História e Compromisso</h2>
+        
+        <!-- PRIMEIRO PARÁGRAFO -->
+        <p>Desde 1994 que a nossa empresa se dedica integralmente à arte de transformar lares, elevando o conforto e a estética de cada espaço habitacional. Com uma trajetória consolidada que ultrapassa duas décadas, a longevidade no mercado reflete o nosso compromisso inabalável com a qualidade e a satisfação do cliente. Acreditamos que a casa é o epicentro da vida pessoal e, por isso, procuramos fornecer soluções de Decoração da Casa que combinem funcionalidade com as últimas tendências de design.</p>
+        
+        <!-- SEGUNDO PARÁGRAFO -->
+        <p>Localizada no coração da cidade, no endereço Rua da Restauração 125 A, em Rio Tinto, Porto (Portugal, Código Postal 4435-056), a nossa loja tornou-se um ponto de referência para quem procura um portefólio abrangente de artigos. A nossa oferta estende-se a todas as divisões da casa, abrangendo as áreas de Cozinha e WC, onde a utilidade se encontra com o requinte. Para além dos pequenos pormenores decorativos, destacamos a seleção de Móveis robustos e com design intemporal, bem como uma vasta gama de Têxteis que conferem calor e personalidade aos ambientes. A excelência no serviço e o foco na curadoria de peças distintas são os pilares que sustentam a nossa missão desde o primeiro dia, permitindo-nos continuar a ser a escolha preferida para a decoração do seu lar.</p>
     </section>
 
     <footer>
-        <p>&copy; 2025 Casa dos Aromas | <a href="contactos.html">Contacta-nos</a></p>
+        <p>&copy; 2025 Casa dos Aromas | <a href="#">Contacta-nos</a></p>
     </footer>
 </body>
 </html>
