--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
         <address style="font-style: normal; color: #F0F0F0; margin-bottom: 25px;">
             Rua da Restauração 125 A, Rio Tinto, Porto, Portugal 4435-056
         </address>
-        <!-- Link Google Maps para facilitar a navegação -->
-        <a href="https://maps.app.goo.gl/YourGoogleMapsLink" target="_blank" class="map-button">Obter Direções</a>
+        <!-- Link Google Maps funcional -->
+        <a href="https://www.google.com/maps/place/Casa+dos+Aromas/@41.1940156,-8.5777164,16z/data=!4m6!3m5!1s0xd246406f17da8e5:0x54bfb356660813ef!8m2!3d41.1948284!4d-8.5759354!16s%2Fg%2F1hc2w4qt5?entry=ttu&g_ep=EgoyMDI1MTExNy4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="map-button">Obter Direções</a>
     </div>
 
     <!-- FOOTER -->
