--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Início - Casa dos Aromas</title>
+    <!-- Ligação ao ficheiro de estilos externo -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+    <!-- HEADER: Logótipo à Esquerda, Menu ao Centro -->
     <header>
         <a href="index.html" class="logo-link" title="Ir para a Página Inicial">
-            <!-- APONTA PARA logo.png -->
+            <!-- APONTA PARA logo.png NA RAIZ -->
             <img src="logo.png" 
                  alt="Logótipo Casa dos Aromas" 
                  class="logo-img">
@@ -23,6 +25,7 @@
         </nav>
     </header>
 
+    <!-- 1. HERO SECTION -->
     <section class="hero-banner">
         <div class="hero-overlay"></div>
         <div class="hero-content">
@@ -32,12 +35,14 @@
         </div>
     </section>
 
+    <!-- 2. SECÇÃO DESTAQUE COM O SEU TEXTO NOVO -->
     <section class="about-highlight">
-        <h2>Tradição e Design em Cada Pormenor</h2>
-        <p>Com uma trajetória consolidada que ultrapassa duas décadas, desde 1994, o nosso compromisso inabalável é transformar o seu lar, elevando o conforto e a estética de cada espaço. Localizados em Rio Tinto, Porto, oferecemos uma curadoria de peças distintas que abrangem móveis, têxteis e artigos para Cozinha e WC.</p>
+        <h2>A Convergência Perfeita entre Conforto e Estética</h2>
+        <p>A nossa missão, estabelecida em 1994, é clara: transformar o seu lar num santuário de design e bem-estar. O compromisso da Casa dos Aromas é inabalável no que respeita a elevar o conforto e a estética dos espaços. Localizados em Rio Tinto, Porto, apresentamos um catálogo que engloba diferentes móveis, para diferentes divisões na sua casa. Convidamo-lo a descobrir a diferença de um serviço baseado na tradição, onde cada peça é selecionada para otimizar a sua experiência e refletir um gosto intemporal.</p>
         <a href="sobre.html" class="secondary-cta">Ler a História Completa</a>
     </section>
     
+    <!-- 3. PRÉ-VISUALIZAÇÃO DE PRODUTOS -->
     <section>
         <h2 style="text-align: center; color: var(--color-forest-green); margin-bottom: 40px;">Algumas Inspirações da Nossa Galeria</h2>
         <div class="gallery-preview">
@@ -56,6 +61,7 @@
         </div>
     </section>
 
+    <!-- 4. CONEXÃO LOCAL -->
     <div class="contact-box">
         <h3>Visite a Nossa Loja</h3>
         <p>Gostaria de ver os nossos artigos de perto? Estamos em Rio Tinto, à sua espera.</p>
@@ -65,6 +71,7 @@
         <a href="https://www.google.com/maps/place/Casa+dos+Aromas/@41.1940156,-8.5777164,16z" target="_blank" class="map-button">Obter Direções</a>
     </div>
 
+    <!-- FOOTER -->
     <footer>
         <p>&copy; 2025 Casa dos Aromas | <a href="contactos.html" style="color: var(--color-white); text-decoration: underline;">Contacta-nos</a></p>
     </footer>
